--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,14 @@ jobs:
         
         # desktop-1.0.jar needs to be downloaded
 
-        echo "${{ secrets.DESKTOP_JAR_BASE64 }}" | base64 -d > lib/desktop-1.0.jar
+    - name: Check secret and decode
+      run: |
+        echo "Secret length: ${#DESKTOP_SECRET}"
+        echo "$DESKTOP_SECRET" | base64  -d > lib/desktop-1.0.jar
+        echo "File size: $(stat -c%s lib/desktop-1.0.jar
+        file lib/desktop-1.0.jar
+      env:
+        DESKTOP_SECRET: ${{ secrets.DESKTOP_JAR_BASE64 }}
     
     - name: Build with Maven
       run: mvn clean package
