--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,7 +50,7 @@ jobs:
         
         # Download desktop jar from your Google Drive
         echo "Downloading desktop jar..."
-        curl -L -o lib/desktop-1.0.jar "https://drive.google.com/file/d/1er9WxTLN8TE-obbnzYf-bihdCoxNbuYg/view?usp=sharing"
+        curl -L -o lib/desktop-1.0.jar "https://drive.google.com/uc?export=download&id=1er9WxTLN8TE-obbnzYf-bihdCoxNbuYg"
         
     - name: Verify all dependencies
       run: |
