--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,11 @@ on:
     tags:
       - 'v*'  # Triggers on version tags like v1.0.0
 
+permissions:
+  contents: write
+  packages: write
+  actions: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -87,16 +92,15 @@ jobs:
       
     - name: Create Release
       id: create_release
-      uses: actions/create-release@v1
+      uses: softprops/action-gh-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ github.ref }}
+        files: target/*.jar
         release_name: Release ${{ github.ref }}
         body: |
-          Automated release of Strike Poison Mod
-        draft: false
-        prerelease: false
+          "Automated release of Strike Poison Mod"
+        generate_release_notes: true
 
     - name: Upload Release Asset
       uses: actions/upload-release-asset@v1
